--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,7 +32,7 @@ jobs:
 
     # Run terraform fmt to check whether the formatting of the files is correct
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform fmt -check || (echo "Ponizsze pliki nie sa poprawnie sformatowane:" && terraform fmt -check -list)
 
     # Run terraform plan
     - name: Terraform Plan
