--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,48 +1,55 @@
-name: 'Terraform CI'
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  build-and-deploy:
     runs-on: ubuntu-latest
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v2
 
-    # Install the latest version of Terraform CLI
+    - name: Setup Docker
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to Google Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: gcr.io
+        username: _json_key
+        password: ${{ secrets.GCR_JSON_KEY }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: gcr.io/axial-camp-377809/dareit-challenge:${{ github.sha }}
+
+    - name: Setup Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0.2.1
+      with:
+        project_id: axial-camp-377809
+        service_account_key: ${{ secrets.GCR_JSON_KEY }}
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.0.0
 
+    - name: Terraform Init and Apply
+      run: |
+        echo "gcp_credentials = \"${{ secrets.TF_GOOGLE_CREDENTIALS }}\"" > terraform.tfvars
+        echo "gcp_project_id = \"axial-camp-377809\"" >> terraform.tfvars
+        terraform init
+        terraform apply -auto-approve
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS }}
-
-    # Run terraform fmt to check whether the formatting of the files is correct
-    - name: Terraform Format
-      run: terraform fmt -check
-
-    # Run terraform plan
-    - name: Terraform Plan
-      run: terraform plan
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS }}
-
-    # Run terraform apply
-    - name: Terraform Apply
-      run: terraform apply -auto-approve
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS }}
+    - name: Deploy to GKE
+      run: |
+        gcloud container clusters get-credentials/dareit-challenge-cluster --zone us-central1-a
+        kubectl apply -f k8s-deployment.yaml
+        kubectl set image deployment/dareit-challenge/dareit-challenge=gcr.io/axial-camp-377809/dareit-challenge:${{ github.sha }}
