--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,35 +9,46 @@ env:
   GCP_PROJECT_ID: axial-camp-377809
 
 jobs:
-  build:
+  terraform:
+    name: 'Terraform'
     runs-on: ubuntu-latest
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+
     steps:
-    - name: Checkout repository
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
       uses: actions/checkout@v2
 
     - name: Build Docker image
       run: docker build -t myapp:latest .
 
+    # Install the latest version of Terraform CLI
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 1.0.11
 
-    - name: Run terraform plan
-      run: |
-        echo 'terraform {
-          required_providers {
-            google = {
-              source = "hashicorp/google"
-              version = ">= 3.0"
-            }
-          }
-        }
-        provider "google" {
-          credentials = "${{ secrets.TF_GOOGLE_CREDENTIALS }}"
-          project     = "${{ env.GCP_PROJECT_ID }}"
-          region      = "us-central1"
-        }' > ./terraform/main.tf
-        cat ./terraform/main.tf
-        terraform init -input=false -backend=false
-        terraform plan -input=false -var "gcp_credentials=${{ secrets.TF_GOOGLE_CREDENTIALS }}" -var "gcp_project_id=${{ env.GCP_PROJECT_ID }}"
+
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS }}
+
+    # Run terraform fmt to check whether the formatting of the files is correct
+    - name: Terraform Format
+      run: terraform fmt -check || (echo "Ponizsze pliki nie sa poprawnie sformatowane:" && terraform fmt -check -list)
+
+    # Run terraform plan
+    - name: Terraform Plan
+      run: terraform plan
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS }}
+
+    # Run terraform apply
+    - name: Terraform Apply
+      run: terraform apply -auto-approve
+      env:
+        GOOGLE_CREDENTIALS: ${{ secrets.TF_GOOGLE_CREDENTIALS }}
